--- a/Public/asset/style/SCSS/style.scss
+++ b/Public/asset/style/SCSS/style.scss
@@ -166,7 +166,8 @@ hr.separator_4 {
     margin-bottom: 5%;
     border-top: $border-3px-solid-tertiary;
     border-bottom: $border-3px-solid-tertiary;
-    height: 20em;    
+    height: 20em;
+     
 }
 
 .fa-rectangle-xmark {
@@ -186,6 +187,7 @@ ELEMENTS
     height: 12em;
     align-items: center;
     margin-bottom: 5%;
+   // border: 1px solid red;
 }
 
 .event_elements button {
@@ -436,3 +438,24 @@ footer ul li {
     text-align: center;
     display: none;
 }
+
+@media screen and (max-width: 768px) {
+    header {
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
+  
+    .logo {
+      margin-bottom: 10px;
+    }
+  
+    #headTitle {
+      margin-left: 0; /* Réinitialisation de la marge pour que le texte reste centre*/
+      text-align: center;
+    }
+  
+    nav {
+      grid-template-columns: 1fr;
+    }
+  }
