--- a/Public/asset/style/SCSS/style.scss
+++ b/Public/asset/style/SCSS/style.scss
@@ -26,6 +26,12 @@ p{
     @include font-size(18);
 }
 
+input:focus {
+    outline:3px dashed $primary-color;
+    border: hidden;
+    
+} 
+
 
 /* HEADER STYLING
 */
@@ -58,7 +64,7 @@ h1 {
 
 
 .first_e {
-    color:#49b49a;
+    color: $primary-color;
     display: inline-block;
     transform: scale(-1,1);
     -moz-transform: scale(-1, 1) rotate(-15deg);
@@ -70,7 +76,7 @@ h1 {
 }   
 
 .second_e {
-    color: #e78860;
+    color: $secondary-color;
     display: inline-block;
     -webkit-transform : rotate(-15deg); 
     -moz-transform : rotate(-15deg); 
@@ -105,8 +111,8 @@ h1 {
 }
 
 .submit_hdr input[type="submit"] {
-    border: $border-3px-solid-secondary;
-    background-color: #FFFF;
+    border: $border-3px-solid-primary;
+    background-color: $primary-color;
     width: 120px;
     height: 25px;
     margin-top: 3%;
@@ -218,6 +224,7 @@ ELEMENTS
     margin: 2% 25% 2% 25%;
     padding: 2% 0% 2% 0%;
     height: 80vh;
+    
 }
 
     .event_creation_form form input {
@@ -227,6 +234,7 @@ ELEMENTS
         margin-top: 1%;
         height: 2.5vw;
         align-self: center;
+        height: 5vh;
     }
 
     .event_creation_form div {
@@ -241,7 +249,7 @@ ELEMENTS
 
     .event_creation_form input[type="submit"] {
         align-self: flex-end;
-        background-color: #FFFF;
+        background-color: $primary-color;
         @include border-radius($radius-15-0);
         height: 40px;
         width: 120px;
@@ -249,7 +257,7 @@ ELEMENTS
         margin-top: 3%;
         cursor: pointer;
         font-family: 'quicksand';
-        border: $border-3px-solid-secondary; 
+        border: $border-3px-solid-primary; 
     }
 
     .form_page p{
@@ -399,6 +407,12 @@ footer ul li {
     border-right: $border-3px-solid-secondary;
 }
 
+#nav_footer li:hover {
+    border-right: $border-3px-solid-primary;
+}
+
+
+
 .nobr {
     white-space: nowrap;
 }
@@ -439,6 +453,26 @@ footer ul li {
     display: none;
 }
 
+@media screen and (max-width: 1300px) {
+    footer {
+        display: grid;
+        grid-template-columns: 1fr;
+        text-align: center;
+        padding: 0 3vw;
+
+        ul{
+            padding: 5vh 0;
+        }
+    }
+
+    #nav_footer{
+        @include flex-column-self-center;
+        li{
+            padding-bottom: 1vh;
+        }
+    }
+}
+
 @media screen and (max-width: 768px) {
     header {
       flex-direction: column;
@@ -455,7 +489,37 @@ footer ul li {
       text-align: center;
     }
   
-    nav {
-      grid-template-columns: 1fr;
+    .navbar {
+
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%;
+        padding: 0 3vw;
+        text-align: center;
     }
+
+    .event_creation_form input[type="submit"] {
+        width: 100%;
+        margin:auto;
+        background-color: $primary-color;
+    }
+
+    footer {
+        display: grid;
+        grid-template-columns: 1fr;
+        text-align: center;
+        padding: 0 3vw;
+
+        ul{
+            padding: 5vh 0;
+        }
+    }
+
+    #nav_footer{
+        @include flex-column-self-center;
+        li{
+            padding-bottom: 1vh;
+        }
+    }
+
   }
