--- a/Public/asset/style/SCSS/utils/_variables.scss
+++ b/Public/asset/style/SCSS/utils/_variables.scss
@@ -24,6 +24,7 @@ $bot-separator-margin: 2% 19% 2% 1%;
 
 //*BORDERS
 
+$border-3px-solid-primary: 3px solid $primary-color;
 $border-3px-solid-secondary: 3px solid $secondary-color;
 $border-3px-solid-tertiary: 3px solid $tertiary-color;
 $border-2px-solid: 2px solid;
